# user-management-system

./: README.md  pyproject.toml
alembic/: env.py
alembic/versions/: 0806b4ecd9ae_update_column_created_at_and_updated_at.py  3df266d8f883_change_constrain_department_table.py  7de525f7578d_add_field_is_superuser_in_user_table.py  bc4357805f74_add_department_job_employee_status_and_.py  cc8fddb2bae9_add_email_address_on_employee_table.py  e033941ba052_change_employee_column_departmen_to_.py  e469a4bdc542_add_table_role_permission_for_handle_.py  fcb118902d0d_add_table_presence.py
app/: database.py  main.py  schemas.py
app/auth/: constants.py  dependencies.py  models.py  router.py  schemas.py  service.py  utils.py
app/department/: models.py  router.py  schemas.py  service.py
app/dependencies/: database.py
app/employee/: models.py  router.py  schemas.py  service.py
app/models/: user.py
app/policy/: dependencies.py  models.py  router.py  schemas.py  service.py  utils.py
app/presence/: models.py  router.py  service.py
app/routers/: auth.py  department.py
backend/: Entity Relationship Diagram.drawio
backend/app/: main.py  schemas.py
backend/tests/: conftest.py  test_department_and_job.py  test_user_and_auth.py
tests/: conftest.py  test_department_and_job.py  test_main.py  test_policy.py  test_user_and_auth.py  utils.py
tests/api/: test_department_and_job.py  test_policy.py  test_user_and_auth.py
tests/department/: test_department_service.py  test_job_service.py
tests/employee/: test_employee_service.py  test_employee_status_service.py
(+9 files in other folders)
